<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceOrder_Activity">

    <TextView
        android:id="@+id/txtPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtPayment"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCardInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/txtCardInfo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPayment" />

    <EditText
        android:id="@+id/edCardNum"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edCardNum"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNameOnCard"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edCVV"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edCVV"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edCardNum"
        tools:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edExpDate"
        android:layout_width="93dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edExpDate"
        android:inputType="datetime|date"
        app:layout_constraintStart_toEndOf="@+id/edCVV"
        app:layout_constraintTop_toBottomOf="@+id/edCardNum"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edNameOnCard"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edNameOnCard"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCardInfo"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btnPlaceOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edExpDate" />

</androidx.constraintlayout.widget.ConstraintLayout>