<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="330dp"
    android:layout_marginEnd="10dp"
    android:background="#DAD8D8"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UsingOnClickInXml">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imgProductDescription"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/txtProductName"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/txtPrice"
        android:textColor="#B71C1C"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:backgroundTint="#2196F3"
        android:onClick="onClickSelect"
        android:text="@string/btnSelect"
        android:textColor="#212121"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>