<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loFeaturedItem"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="#DAD8D8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeTitle">

        <TextView
            android:id="@+id/tvFeaturedItem"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="36sp"
            android:text="@string/txtfeaturedItems"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBuyItem"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:backgroundTint="#2196F3"
            android:drawableLeft="@drawable/baseline_favorite_24"
            android:padding="10dp"
            android:text="@string/btnBuyAnItem"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnSellItem"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/bg_input"
            android:backgroundTint="#2196F3"
            android:drawableLeft="@drawable/baseline_sell_24"
            android:padding="10dp"
            android:text="@string/btnSellAnItem"
            android:textColor="#212121" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="353dp"
        android:layout_height="169dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="#DAD8D8"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/imgProfileDescription"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvUsername"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtUserEmail"
                    android:textColor="#455A64" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_input"
            android:backgroundTint="#2196F3"
            android:drawableLeft="@drawable/baseline_settings_24"
            android:padding="10dp"
            android:text="@string/btnEditProfile" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/bg_input"
            android:backgroundTint="#E91E1E"
            android:drawableLeft="@drawable/baseline_logout_24"
            android:padding="10dp"
            android:text="@string/btnLogout"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="#DAD8D8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loFeaturedItem"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/tvOrderManagement"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="36sp"
            android:text="@string/txtorderManagement"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnViewOrderHistory"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:backgroundTint="#2196F3"
            android:drawableLeft="@drawable/baseline_list_alt_24"
            android:padding="10dp"
            android:text="@string/btnViewOrderHistory"
            android:textColor="#212121" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>